<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2013 Paul Muad'Dib

This file is part of Graboid.
 
Graboid is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Graboid is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Graboid.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_import_default"
        android:icon="@drawable/ic_launcher"
        android:onClick="menuImportDefault"
        android:showAsAction="never"
        android:title="@string/menu_import_default"/>
    <item
        android:id="@+id/menu_clear_keys"
        android:icon="@drawable/ic_launcher"
        android:onClick="menuClearKeys"
        android:showAsAction="never"
        android:title="@string/menu_clear_keys"/>
    <item
        android:id="@+id/menu_clear_tag"
        android:icon="@drawable/ic_launcher"
        android:onClick="menuClearTag"
        android:showAsAction="never"
        android:title="@string/menu_clear_tag"/>
    <item
        android:id="@+id/menu_fuse_acl"
        android:icon="@drawable/ic_launcher"
        android:onClick="menuFuseACL"
        android:showAsAction="never"
        android:title="@string/menu_fuse_acl"/>
    <item
        android:id="@+id/menu_info"
        android:icon="@drawable/ic_launcher"
        android:onClick="menuInfo"
        android:showAsAction="never"
        android:title="@string/menu_info"/>

</menu>